bug fix navbar overflowing page width

--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -17,6 +17,7 @@ body{
     align-items: center;
     z-index: 1;
     background-color: white;
+    box-sizing: border-box;
 }
 
 .navbar>*{
